--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -112,6 +112,9 @@ button {
     padding-left: 10px;
     
 }
+button:hover {
+    cursor: pointer;
+}
 .fas.fa-search {
     display: block;
     margin-top: 20px;
