--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -723,14 +723,14 @@ h4 {
     }
 }
 
-    @media screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
             
     body {
         margin: auto;
     }
 
     .body-margin {
-        margin: auto;
+        margin: 5px;
     }
             
     header {
@@ -752,9 +752,10 @@ h4 {
             
     .menu ul li {
         border-bottom: solid 3px #f2f2f2;
-        margin-left: -20px;
-        width: 200px;
+        margin-left: -40px;
+        width: 220px;
         text-align: center;
+        
     }
             
     .blue {
@@ -772,6 +773,7 @@ h4 {
         
     .inscrip {
         font-size: 20px;
+        margin-right: 5px;
     }
             
     .presentation {
@@ -800,7 +802,7 @@ h4 {
             
     #search {
         height: 50px;
-        width: 400px;
+        width: 300px;
     }
             
     button.button-rechercher {
@@ -900,7 +902,7 @@ h4 {
 
     .infofiltres {
         margin-left: 15px;
-        width: 100%;
+        width: 90%;
     }
                 
     .heberetaside {
@@ -910,7 +912,7 @@ h4 {
     #popula {
         width: 100%;
         height: auto;
-        margin: 0px;
+        margin: auto;
         border-radius: 0px;
     }
                 
@@ -920,8 +922,8 @@ h4 {
     }
                 
     .popul, .popul2, .popul3 {
-        margin-left: auto;
-        width: 100%;
+        margin-left: 5px;
+        width: 95%;
         margin-top: 2px;
     }
     
