--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,8 +4,8 @@ body {
     margin: auto;
 }
 .body-margin {
-    margin-left: 40px;
-    margin-right: 40px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 
@@ -27,6 +27,7 @@ body {
     color: #0065FC;
     float: right;
     margin-top: 20px;
+    text-decoration: none;
 }
 
 .blue {
@@ -35,6 +36,7 @@ body {
     padding-top: 20px;
     margin-top: -20px;
     margin-right: 40px;
+    text-decoration: none;
 }
 
 .blue:hover {
@@ -49,6 +51,11 @@ body {
     color: black;
     margin-top: -5px;
     text-decoration: none;
+}
+
+.black:hover {
+    color: black;
+
 }
 
 a {
@@ -234,15 +241,15 @@ button {
     background-color: #F2F2F2;
     border-radius: 20px;
     margin-bottom: 0px;
-   width: 70%;
-   margin-top: 10px;
+    width: 67%;
+    margin-top: 10px;
 }
 
 h2 {
     font-weight: bold;
     font-size: 20px;
     padding-top: 20px;
-    padding-left: 40px;
+    padding-left: 20px;
 }
 
 h3 {
@@ -258,11 +265,11 @@ h3 {
 .heberg {
     background-color: white;
     border-radius: 15px;
-    width: 30%;
+    width: 32%;
     height: 210px;
     margin-top: 10px;
-    margin-left: 10px;
-    margin-right: 20px; 
+    margin-left: auto;
+    margin-right: auto; 
 }
 
 .heberg img {
@@ -304,14 +311,14 @@ h3 {
     border-radius: 20px; 
     margin-top: 10px;
     height: 650px;
-    margin-left: 50px;
-    width: 30%;
+    margin-left: 10px;
+    width: 33%;
 } 
  
 h3 {
     font-weight: bold;
     font-size: 20px;
-    padding-left: 40px;
+    padding-left: 20px;
     color: black;
     padding-top: 0px;  
 }
@@ -323,13 +330,19 @@ h3 {
     width: 150px;
     padding-top: 5px;
 }
+.popul2 img {
+    width: 250px;
+}
 
 .popul2, .popul3 {
     margin-top: 30px;
+    height: 100%;
 }
 
 .popul {
     margin-top: 0px;
+    height: 100%;
+
 }
 
 .popul, .popul2, .popul3 {
@@ -337,7 +350,8 @@ h3 {
     background-color: white;
     border-radius: 20px;
     height: 150px;
-    width: 350px;
+    width: 95%;
+    margin-left: 10px;
 }
 
 .fleche {
@@ -350,17 +364,17 @@ h3 {
 
 .ho {
     margin-left: 10px;
-    width: 70%;
+    width: 80%;
     font-size: 14px;
     color: black;
     font-weight: bold;
-    padding-top: 5px;
+    margin-top: auto;
 }
 
 .star2{
     font-size: 12px;
     color: #0065FC;
-    padding-top: 20px;
+    padding-top: 0px;
     padding-left: 10px;
 }
 
@@ -496,7 +510,8 @@ h4 {
     margin-top: 20px;
 }
 
-@media screen and (min-width: 981px) and (max-width: 1460px) {
+
+@media screen and (min-width: 981px) and (max-width: 1024px) {
     
     #logo {
         width: 100px;
