--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -350,8 +350,9 @@ h3 {
     background-color: white;
     border-radius: 20px;
     height: 150px;
-    width: 95%;
-    margin-left: 10px;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .fleche {
